PWA api interceptor fix, title metadata refresh
